--- a/packages/client/src/pages/Forum/components/ForumList/styles.module.scss
+++ b/packages/client/src/pages/Forum/components/ForumList/styles.module.scss
@@ -10,3 +10,12 @@
   overflow: auto;
   border-right: 1px solid #d9534f;
 }
+
+.empty {
+  margin: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+  color: #fff;
+}
