Design leaderboar apge

--- a/packages/client/src/styles/variables.scss
+++ b/packages/client/src/styles/variables.scss
@@ -2,3 +2,17 @@ $primary: #ffffff;
 
 $ruby: #d9534f;
 $ruby-light: #e06662;
+
+$black: #191b1f;
+$black-light: #2e3034;
+$black-second: #272b32;
+
+$vine: #c44c68;
+
+$orange: #ec7735;
+
+$purply: #580d95;
+$purply-ligth: #bf88ec;
+
+$green: #0d6b0d;
+$red: #c70a0a;
