--- a/packages/client/src/pages/Game/styles.module.scss
+++ b/packages/client/src/pages/Game/styles.module.scss
@@ -8,8 +8,19 @@
 
 .congrat {
   position: absolute;
-  top: 80px;
+  top: 10px;
   width: 100vw;
   text-align: center;
   color: red;
+}
+
+.start {
+  width: 200px;
+}
+
+.restart {
+  position: absolute;
+  top: 80px;
+  left: calc(100vw / 2 - 100px);
+  width: 200px;
 }
