--- a/packages/client/src/pages/Profile/styles.module.scss
+++ b/packages/client/src/pages/Profile/styles.module.scss
@@ -1,14 +1,14 @@
-.page_profile {
+.profile {
   padding-top: 50px;
 
-  &__user_avatar {
+  & .avatar {
     display: block;
     margin: 0 auto;
     margin-bottom: 30px;
     max-width: 130px;
   }
 
-  &__user_data_list {
+  & .list {
     margin-bottom: 30px;
   }
 }
