feat: stretching canvas to the full width or height of the window

--- a/packages/client/src/pages/Game/styles.module.scss
+++ b/packages/client/src/pages/Game/styles.module.scss
@@ -23,6 +23,11 @@
   width: 200px;
 }
 
+.startheader {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 .restart {
   position: absolute;
   top: 80px;
