feat: impelement leaderboardSlice

--- a/packages/client/src/pages/Leaderboard/components/LeaderCard/styles.module.scss
+++ b/packages/client/src/pages/Leaderboard/components/LeaderCard/styles.module.scss
@@ -29,11 +29,11 @@
 
 .leader_third {
   .avatar {
-    background: linear-gradient(to left, $purply, $purply-ligth);
+    background: linear-gradient(to left, $purply, $purply-light);
   }
   .name,
   .score {
-    color: $purply-ligth;
+    color: $purply-light;
   }
 }
 
