--- a/packages/client/src/pages/Leaderboard/styles.module.scss
+++ b/packages/client/src/pages/Leaderboard/styles.module.scss
@@ -27,7 +27,7 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: $purply-ligth;
+    background-color: $purply-light;
     border-radius: 20px;
   }
 }
