--- a/packages/client/src/styles/variables.scss
+++ b/packages/client/src/styles/variables.scss
@@ -12,7 +12,7 @@ $vine: #c44c68;
 $orange: #ec7735;
 
 $purply: #580d95;
-$purply-ligth: #bf88ec;
+$purply-light: #bf88ec;
 
 $green: #0d6b0d;
 $red: #c70a0a;
