--- a/packages/client/src/pages/Leaderboard/components/RankCard/styles.module.scss
+++ b/packages/client/src/pages/Leaderboard/components/RankCard/styles.module.scss
@@ -31,6 +31,8 @@
   width: 4rem;
   height: 4rem;
   border-radius: 50%;
+  overflow: hidden;
+  flex-shrink: 0;
 
   & > img {
     max-width: 100%;
