feat: added drag&drop image file feature

--- a/packages/client/src/pages/Game/styles.module.scss
+++ b/packages/client/src/pages/Game/styles.module.scss
@@ -36,7 +36,7 @@
 }
 
 .select {
-  margin-bottom: 20px;
+  margin: 20px 0;
 }
 
 .selectLabel {
@@ -50,4 +50,15 @@
 
 .hide {
   display: none;
+}
+
+.dropZone {
+  height: 100px;
+  color: white;
+  text-align: center;
+  border: 2px dashed white;
+}
+
+.dropZoneLabel {
+  margin: 15px;
 }
