feat: profile page add edit option

--- a/packages/client/src/pages/Profile/components/ProfileUserDataList/styles.module.scss
+++ b/packages/client/src/pages/Profile/components/ProfileUserDataList/styles.module.scss
@@ -1,5 +1,7 @@
 .profile_user_data {
   color: #fff;
+  display: block;
+  margin-bottom: 30px!important;
 
   & .item {
     display: flex;
@@ -16,3 +18,17 @@
     text-align: right;
   }
 }
+
+  .userDataInput{
+    height: 25px;
+    &:disabled {
+      background-color: transparent;
+      box-shadow: none;
+      border: none;
+      background-image:none;
+      color: #fff;
+      outline: none;
+      -webkit-appearance: none;
+
+    }
+  }
