--- a/packages/client/src/pages/Game/styles.module.scss
+++ b/packages/client/src/pages/Game/styles.module.scss
@@ -13,7 +13,8 @@
 
 .congrat {
   position: absolute;
-  top: 10px;
+  top: 0;
+  margin-top: 10px;
   width: 100vw;
   text-align: center;
   color: red;
