--- a/packages/client/src/pages/Forum/components/ForumList/styles.module.scss
+++ b/packages/client/src/pages/Forum/components/ForumList/styles.module.scss
@@ -1,17 +1,30 @@
-.list {
+.conainer {
   display: flex;
   flex-direction: column;
   max-width: 320px;
   width: 100%;
   height: 100%;
+  border-right: 1px solid #d9534f;
+}
+
+.wrapper {
+  display: flex;
+  padding: 10px;
+  border-bottom: 1px solid #d9534f;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   list-style: none;
   margin: 0;
   padding: 20px 0;
   overflow: auto;
-  border-right: 1px solid #d9534f;
 }
 
 .empty {
+  text-align: center;
   margin: 0;
   font-style: normal;
   font-weight: 500;
