--- a/packages/client/src/pages/Forum/components/ForumWindow/styles.module.scss
+++ b/packages/client/src/pages/Forum/components/ForumWindow/styles.module.scss
@@ -1,3 +1,68 @@
+.window {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  height: 100%;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.input {
+  width: 100%;
+}
+
+.button {
+  max-width: 150px;
+}
+
+.comments {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.comment {
+  display: flex;
+  flex-direction: column;
+  max-width: 350px;
+  background-color: #eee;
+  border-radius: 10px;
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+  color: #1e1e1e;
+  cursor: pointer;
+
+  p {
+    margin: 0;
+    margin-bottom: 10px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 13px;
+  }
+
+  span {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 11px;
+  }
+}
+
 .row {
   display: flex;
   justify-content: space-between;
@@ -22,6 +87,7 @@
 }
 
 .description {
+  word-break: break-all;
   margin: 0;
   font-style: normal;
   font-weight: 500;
