--- a/packages/client/src/pages/Forum/components/ForumWindow/styles.module.scss
+++ b/packages/client/src/pages/Forum/components/ForumWindow/styles.module.scss
@@ -8,14 +8,16 @@
 .header {
   display: flex;
   flex-direction: column;
-  overflow: auto;
   height: 100%;
+  overflow: auto;
+  padding: 0 20px 20px 0;
 }
 
 .footer {
   display: flex;
   align-items: center;
   gap: 10px;
+  padding: 20px 20px 0 0;
 }
 
 .input {
@@ -27,40 +29,11 @@
 }
 
 .comments {
+  position: relative;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
   gap: 20px;
-  margin-top: 20px;
-}
-
-.comment {
-  display: flex;
-  flex-direction: column;
-  max-width: 350px;
-  background-color: #eee;
-  border-radius: 10px;
-  border: none;
-  padding: 10px;
-  border-radius: 10px;
-  color: #1e1e1e;
-  cursor: pointer;
-
-  p {
-    margin: 0;
-    margin-bottom: 10px;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 13px;
-    line-height: 13px;
-  }
-
-  span {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 11px;
-    line-height: 11px;
-  }
+  padding-top: 20px;
 }
 
 .row {
