--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -36,3 +36,10 @@ svg:not(:root) {
 a{
   text-decoration: none;
 }
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
