--- a/packages/client/src/pages/Forum/components/ForumComments/styles.module.scss
+++ b/packages/client/src/pages/Forum/components/ForumComments/styles.module.scss
@@ -6,14 +6,21 @@
   padding-top: 20px;
 }
 
+.answers {
+  display: flex;
+}
+
 .wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  gap: 20px;
+  width: 100%;
 }
