--- a/packages/client/src/pages/Forum/components/ForumItem/styles.module.scss
+++ b/packages/client/src/pages/Forum/components/ForumItem/styles.module.scss
@@ -24,6 +24,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  padding: 5px 0;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -44,6 +45,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  padding: 5px 0;
   margin: 0;
   font-style: normal;
   font-weight: 500;
