--- a/packages/client/src/pages/ChangePassword/styles.module.scss
+++ b/packages/client/src/pages/ChangePassword/styles.module.scss
@@ -1,3 +1,5 @@
+@use '../../styles/common.module.scss';
+
 .container {
   display: flex;
   align-items: center;
@@ -32,11 +34,4 @@
   flex-direction: column;
   gap: 10px;
   margin-bottom: 20px;
-}
-
-.buttons {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
 }
