--- a/packages/client/src/pages/Forum/components/ForumView/styles.module.scss
+++ b/packages/client/src/pages/Forum/components/ForumView/styles.module.scss
@@ -17,7 +17,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
-  color: #fff;
+  color: var(--text-color);
 }
 
 .date {
@@ -25,7 +25,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 16px;
-  color: #fff;
+  color: var(--text-color);
 }
 
 .description {
@@ -34,5 +34,5 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 16px;
-  color: #fff;
+  color: var(--text-color);
 }
