--- a/packages/client/src/pages/Main/styles.module.scss
+++ b/packages/client/src/pages/Main/styles.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .pagelanding {
-  color: $primary;
+  color: var(--text-color);
   padding-top: 130px;
 }
 
@@ -77,8 +77,7 @@
 
 .puzzle-promo {
   border-radius: 100%;
-  border: 10px solid white;
-  background-color: #183851;
+  border: 10px solid var(--text-color);
   height: 450px;
   overflow: hidden;
   position: relative;
