--- a/packages/client/src/pages/Game/styles.module.scss
+++ b/packages/client/src/pages/Game/styles.module.scss
@@ -1,4 +1,23 @@
+.columns {
+  display: flex;
+  flex: 1;
+}
+
+.leftPanel {
+  width: 40px;
+  order: 1;
+}
+
+.rightPanel {
+  width: 40px;
+  order: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .game {
+  order: 2;
   display: flex;
   flex-direction: column;
 }
@@ -7,7 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: calc(100vw - 80px);
   height: 100vh;
 }
 
@@ -15,7 +34,7 @@
   position: absolute;
   top: 0;
   margin-top: 10px;
-  width: 100vw;
+  width: 100%;
   text-align: center;
   color: red;
 }
@@ -66,4 +85,61 @@
 
 .audio {
   display: none;
+}
+
+input[type=range][orient=vertical]
+{
+    writing-mode: bt-lr; /* IE */
+    -webkit-appearance: slider-vertical; /* Chromium */
+    width: 8px;
+    height: 175px;
+    padding: 0 5px;
+}
+
+.volume {
+  & {
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    transform: scale(var(--ggs,1));
+    width: 8px;
+    height: 8px;
+    border: 2px solid;
+    border-right: 0;
+    -webkit-perspective: 12px;
+    perspective: 12px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    margin: 0 10px 10px -7px;
+    color: #0075FF;
+   }
+   
+   &::after,
+   &::before {
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute
+   }
+   
+   &::before {
+    left: 2px;
+    transform: rotateY(-90deg);
+    width: 10px;
+    height: 10px;
+    border: 2px solid;
+    border-left: 0;
+    top: -3px
+   }
+   
+   &::after {
+    width: 8px;
+    height: 16px;
+    border: 6px double;
+    border-left: 0;
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+    right: -14px;
+    top: -6px
+   } 
 }
