feat: added theme (#51)
Co-authored-by: y.kochergin <y.kochergin@rambler-co.ru>

--- a/packages/client/src/pages/Forum/components/ForumItem/styles.module.scss
+++ b/packages/client/src/pages/Forum/components/ForumItem/styles.module.scss
@@ -29,7 +29,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
-  color: #fff;
+  color: var(--text-color);
 }
 
 .date {
@@ -38,7 +38,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 16px;
-  color: #fff;
+  color: var(--text-color);
 }
 
 .description {
@@ -51,5 +51,5 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 16px;
-  color: #fff;
+  color: var(--text-color);
 }
