--- a/packages/client/src/pages/Auth/components/AuthSignup/styles.module.scss
+++ b/packages/client/src/pages/Auth/components/AuthSignup/styles.module.scss
@@ -5,10 +5,10 @@
   flex-direction: column;
   max-width: 340px;
   width: 100%;
-  border: 1px solid #eee;
   border-radius: 12px;
   padding: 30px;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+  background-color: #2e3034;
 }
 
 .title {
